fixing alignment bullshit

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -30,7 +30,6 @@ a {
 
 main {
   padding: 5em 0 5em 0;
-  text-align: center;
 }
 
 input, textarea {
