--- a/app/styles/_project.scss
+++ b/app/styles/_project.scss
@@ -23,9 +23,8 @@
   &-form {
     &--INPUTS {
       text-align: left;
-      padding: 1em;
+      padding: 2em 0;
       display: block;
-      margin: 0 auto;
       max-width: 500px;
     }
   }
